add styling to pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <!-- Navbar  -->
- <nav class="py-2 bg-dark border-bottom">
+ <nav class="py-2  border-bottom site-nav">
    <div class="container d-flex flex-wrap">
      <ul class="nav me-auto ">
        <li class="nav-item"><a href="" class="nav-link link-white px-2 active" aria-current="page">Home</a></li>
@@ -18,7 +18,7 @@
      <a href="/" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto text-dark text-decoration-none">
        <svg class="bi me-2" width="40" height="32">
          <use xlink:href="#bootstrap" /></svg>
-       <span class="fs-4">Double header</span>
+       <span class="fs-4 brand">Neighbourhood Watch</span>
      </a>
      <form class="col-12 col-lg-auto mb-3 mb-lg-0">
        <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
