--- a/src/app/components/neighbourhood/neighbourhood.component.html
+++ b/src/app/components/neighbourhood/neighbourhood.component.html
@@ -1,67 +1,78 @@
-<p>neighbourhood works!</p>
-<!-- <button (click)="findNeighbourhood()">Neighbourhood</button>
-
-<div *ngIf="neighbourhood">
-  <ul *ngFor="let neighbourhood of neighbourhood">
-    <li>post name:{{neighbourhood.neighbourhood_name}}</li>
-    <li>post content: {{neighbourhood.location}}</li>
-    <li>occupants: {{neighbourhood.occupants}}</li>
-    <li>description: {{neighbourhood.description}}</li>
-  </ul>
-</div> -->
-
-<!-- <form #neighbourhoodPost="ngForm" (ngSubmit)="onSubmit(neighbourhoodPost.value)" method="POST" class="form-group">
-  <input type="text" name="neighbourhood_name" id="neighbourhood_name" ngModel placeholder="neighbourhood_name" class="form-control">
-  <input type="text" name="location" id="location" ngModel placeholder="location" class="form-control">
-  <input type="number" name="occupants" id="occupants" ngModel placeholder="occupants" class="form-control">
-  <input type="text" name="description" id="description" ngModel placeholder="description" class="form-control">
-
-  <button type="submit" class="btn btn-primary">Add Neighbourhood</button>
-</form> -->
-
-  <!-- <form #updateneighbourhood="ngForm"
-    (ngSubmit)="updateNeighbourhood(updateneighbourhood.value.id,updateneighbourhood.value)" method="POST">
-    <input type="number" name="id" id="id" ngModel placeholder="id">
-    <input type="text" name="neighbourhood_name" id="neighbourhood_name" ngModel placeholder="neighbourhood_name">
-    <input type="text" name="location" id="location" ngModel placeholder="location">
-    <input type="number" name="occupants" id="occupants" ngModel placeholder="occupants">
-    <input type="text" name="description" id="description" ngModel placeholder="description">
-    <button type="submit">Update Neighbourhood</button>
-  </form>  -->
 
 <app-neighbourhood-list></app-neighbourhood-list>
 
 <!-- Add Neighbour hood form  -->
 <div class="container">
-  <div>
+  <div class="card card-shadow p-3">
+    <h4 class="text-center">Add A Neighbourhood</h4>
     <div class="submit-form">
       <div *ngIf="!submitted">
-        <div class="form-group">
+        <div class="form-group mb-2">
           <label for="title">Title</label>
           <input type="text" class="form-control" id="neighbourhood_name" required [(ngModel)]="neighbourhood.neighbourhood_name"
             name="neighbourhood_name" />
         </div>
-        <div class="form-group">
+        <div class="form-group mb-2">
           <label for="description">Description</label>
           <input class="form-control" id="description" required [(ngModel)]="neighbourhood.description" name="description" />
         </div>
-        <div class="form-group">
+        <div class="form-group mb-2">
           <label for="location">Location</label>
           <input class="form-control" id="location" required [(ngModel)]="neighbourhood.location"
             name="location" />
         </div>
-        <div class="form-group">
+        <div class="form-group mb-2">
           <label for="occupants">Occupants</label>
           <input class="form-control" id="occupants" required [(ngModel)]="neighbourhood.occupants"
             name="occupants" type="number" />
         </div>
-        <button (click)="saveNeighbourhood()" class="btn btn-success">Submit</button>
+        <button (click)="saveNeighbourhood()" class="btn btn-success mt-3">Submit</button>
       </div>
       <div *ngIf="submitted">
         <h4>Tutorial was submitted successfully!</h4>
-        <button class="btn btn-success" (click)="newNeighbourhood()">Add</button>
+        <button class="btn btn-success mt-3" (click)="newNeighbourhood()">Add</button>
       </div>
     </div>
   </div>
 </div>
 <!-- End of form  -->
+<!-- Footer  -->
+<footer class="site-footer mt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <h6>About</h6>
+        <p class="text-justify">Your go to app for neighbourhood cohesiveness and collaboration. </p>
+      </div>
+      <div class="col-xs-6 col-md-3">
+        <!-- <h6>Categories</h6> -->
+        <ul class="footer-links">
+        </ul>
+      </div>
+      <div class="col-xs-6 col-md-3">
+        <h6 class="text-black">Quick Links</h6>
+        <ul class="footer-links">
+          <li><a href="/">Home</a></li>
+          <li><a href="/post">Posts</a></li>
+          <li><a href="/business">Business</a></li>
+        </ul>
+      </div>
+    </div>
+    <hr>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-sm-6 col-xs-12">
+        <p class="copyright-text">Copyright &copy; 2021 All Rights Reserved by <a href="#">Joy Kirii</a>. </p>
+      </div>
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <!-- <ul class="social-icons">
+          <li><a class="facebook" href="#"><i class="bi bi-facebook"></i></a></li>
+          <li><a class="twitter" href="#"><i class="bi bi-twitter"></i></a></li>
+          <li><a class="linkedin" href="#"><i class="bi bi-linkedin"></i></a></li>
+        </ul> -->
+      </div>
+    </div>
+  </div>
+</footer>
+<!-- End Footer  -->
