--- a/src/app/components/business-list/business-list.component.html
+++ b/src/app/components/business-list/business-list.component.html
@@ -5,13 +5,13 @@
       </div>
     </div>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-6 mb-5">
     <h4>Business List</h4>
     <ul class="list-group">
       <li class="list-group-item" *ngFor="let business of business; let i = index" [class.active]="i == currentIndex"
         (click)="setActiveBusiness(business, i)"> {{ business.business_name}} </li>
     </ul>
-    <button class="m-3 btn btn-sm btn-danger" (click)="removeAllBusiness()"> Remove All </button>
+    <button class="m-3 btn btn-sm btn-danger mb-5" (click)="removeAllBusiness()"> Remove All </button>
   </div>
 
 <div class="col-md-6">
