--- a/src/app/components/neighbourhood-details/neighbourhood-details.component.html
+++ b/src/app/components/neighbourhood-details/neighbourhood-details.component.html
@@ -1,36 +1,79 @@
-<p>neighbourhood-details works!</p>
-<div>
-  <div *ngIf="currentNeighbourhood.id" class="edit-form">
-    <h4>Edit Neighbourhood</h4>
-    <form>
-      <div class="form-group">
-        <label for="neighbourhood_name">Neighbourhood Name</label>
-        <input type="text" class="form-control" id="neighbourhood_name"
-          [(ngModel)]="currentNeighbourhood.neighbourhood_name" name="neighbourhood_name" />
-      </div>
-      <div class="form-group">
-        <label for="description">Description</label>
-        <input type="text" class="form-control" id="description" [(ngModel)]="currentNeighbourhood.description"
-          name="description" />
-      </div>
-      <div class="form-group">
-        <label for="location">Location</label>
-        <input type="text" class="form-control" id="location" [(ngModel)]="currentNeighbourhood.location"
-          name="location" />
-      </div>
-      <div class="form-group">
-        <label for="occupants">Occupants</label>
-        <input type="number" class="form-control" id="occupants" [(ngModel)]="currentNeighbourhood.occupants"
-          name="occupants" />
-      </div>
-      <div class="form-group">
-        <label><strong>Status:</strong></label> {{ currentNeighbourhood.published ? "Published" : "Pending" }} </div>
-    </form>
-    <button class="badge badge-primary mr-2" *ngIf="currentNeighbourhood.published"
-      (click)="updatePublished(false)"> UnPublish </button>
-    <button *ngIf="!currentNeighbourhood.published" class="badge badge-primary mr-2"
-      (click)="updatePublished(true)"> Publish </button>
-    <button class="badge badge-danger mr-2" (click)="deleteNeighbourhood()"> Delete </button>
-    <button type="submit" class="badge badge-success mb-2" (click)="updateNeighbourhood()"> Update </button>
-    <p>{{ message }}</p>
+<div class="container">
+  <div>
+    <div *ngIf="currentNeighbourhood.id" class="edit-form">
+      <h4 class="text-center mb-5">Edit Neighbourhood</h4>
+      <form>
+        <div class="form-group mb-2">
+          <label for="neighbourhood_name">Neighbourhood Name</label>
+          <input type="text" class="form-control" id="neighbourhood_name"
+            [(ngModel)]="currentNeighbourhood.neighbourhood_name" name="neighbourhood_name" />
+        </div>
+        <div class="form-group mb-2">
+          <label for="description">Description</label>
+          <input type="text" class="form-control" id="description" [(ngModel)]="currentNeighbourhood.description"
+            name="description" />
+        </div>
+        <div class="form-group mb-2">
+          <label for="location">Location</label>
+          <input type="text" class="form-control" id="location" [(ngModel)]="currentNeighbourhood.location"
+            name="location" />
+        </div>
+        <div class="form-group mb-2">
+          <label for="occupants">Occupants</label>
+          <input type="number" class="form-control" id="occupants" [(ngModel)]="currentNeighbourhood.occupants"
+            name="occupants" />
+        </div>
+        <div class="form-group mb-2">
+          <label><strong>Status:</strong></label> {{ currentNeighbourhood.published ? "Published" : "Pending" }} </div>
+      </form>
+      <button class="badge badge-primary mr-2 detail-btn" *ngIf="currentNeighbourhood.published" (click)="updatePublished(false)">
+        UnPublish </button>
+      <button *ngIf="!currentNeighbourhood.published" class="btn btn-sm btn-primary mr-2 detail-btn"
+        (click)="updatePublished(true)">
+        Publish </button>
+      <button class="btn btn-sm btn-danger detail-btn" (click)="deleteNeighbourhood()"> Delete </button>
+      <button type="submit" class="btn btn-sm btn-success " (click)="updateNeighbourhood()"> Update </button>
+      <p>{{ message }}</p>
+    </div>
   </div>
+</div>
+<!-- Footer  -->
+<footer class="site-footer mt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <h6>About</h6>
+        <p class="text-justify">Your go to app for neighbourhood cohesiveness and collaboration. </p>
+      </div>
+      <div class="col-xs-6 col-md-3">
+        <!-- <h6>Categories</h6> -->
+        <ul class="footer-links">
+        </ul>
+      </div>
+      <div class="col-xs-6 col-md-3">
+        <h6 class="text-black">Quick Links</h6>
+        <ul class="footer-links">
+          <li><a href="/">Home</a></li>
+          <li><a href="/post">Posts</a></li>
+          <li><a href="/business">Business</a></li>
+        </ul>
+      </div>
+    </div>
+    <hr>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-sm-6 col-xs-12">
+        <p class="copyright-text">Copyright &copy; 2021 All Rights Reserved by <a href="#">Joy Kirii</a>. </p>
+      </div>
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <!-- <ul class="social-icons">
+          <li><a class="facebook" href="#"><i class="bi bi-facebook"></i></a></li>
+          <li><a class="twitter" href="#"><i class="bi bi-twitter"></i></a></li>
+          <li><a class="linkedin" href="#"><i class="bi bi-linkedin"></i></a></li>
+        </ul> -->
+      </div>
+    </div>
+  </div>
+</footer>
+<!-- End Footer  -->
