--- a/src/app/components/post-list/post-list.component.html
+++ b/src/app/components/post-list/post-list.component.html
@@ -1,35 +1,37 @@
-<div class="list row">
-  <div class="col-md-8">
-    <div class="input-group mb-3">
-      <input type="text" class="form-control" placeholder="Search by title" [(ngModel)]="post_name" />
-      <div class="input-group-append">
+<div class="container">
+  <div class="list row">
+    <div class="col-md-8">
+      <div class="input-group mb-3">
+        <div class="input-group-append">
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <h4>Post List</h4>
+      <ul class="list-group">
+        <li class="list-group-item" *ngFor="let post of posts; let i = index" [class.active]="i == currentIndex"
+          (click)="setActivePosts(post, i)">{{ post.post_name}} </li>
+      </ul>
+      <button class="m-3 btn btn-sm btn-danger" (click)="removeAllPosts()"> Remove All </button>
+    </div>
+    <div class="col-md-6">
+      <div *ngIf="currentPost">
+        <h4>Posts</h4>
+        <div>
+          <label><strong>Title:</strong></label> {{ currentPost.post_name}} </div>
+        <div>
+          <label><strong>Description:</strong></label> {{ currentPost.post_content }} </div>
+        <div>
+          <label><strong>Status:</strong></label> {{ currentPost.pub_date ? "Published" : "Pending" }} </div>
+        <a class="btn btn-primary btn-sm" routerLink="{{currentPost.id}}"> Edit </a>
+      </div>
+      <div *ngIf="!currentPost">
+        <br />
+        <p>Please click on a Tutorial...</p>
       </div>
     </div>
   </div>
-  <div class="col-md-6">
-    <h4>Tutorials List</h4>
-    <ul class="list-group">
-      <li class="list-group-item" *ngFor="let post of posts; let i = index" [class.active]="i == currentIndex"
-        (click)="setActivePosts(post, i)">{{ post.post_name}} </li>
-    </ul>
-    <button class="m-3 btn btn-sm btn-danger" (click)="removeAllPosts()"> Remove All </button>
-  </div>
 </div>
-<div class="col-md-6">
-  <div *ngIf="currentPost">
-    <h4>Tutorial</h4>
-    <div>
-      <label><strong>Title:</strong></label> {{ currentPost.post_name}} </div>
-    <div>
-      <label><strong>Description:</strong></label> {{ currentPost.post_content }} </div>
-    <div>
-      <label><strong>Status:</strong></label> {{ currentPost.pub_date ? "Published" : "Pending" }} </div>
-    <a class="badge badge-warning" routerLink="{{currentPost.id}}"> Edit </a>
-  </div>
-  <div *ngIf="!currentPost">
-    <br />
-    <p>Please click on a Tutorial...</p>
-  </div>
-</div>
+
 <!-- <app-post-details></app-post-details> -->
 
