--- a/src/app/components/business/business.component.html
+++ b/src/app/components/business/business.component.html
@@ -1,30 +1,30 @@
-<p>business works!</p>
 
 <app-business-list></app-business-list>
 <div class="container">
-  <div>
+  <div class="card p-4">
+    <h4 class="text-center">Add Business</h4>
     <div class="submit-form">
       <div *ngIf="!submitted">
-        <div class="form-group">
+        <div class="form-group mb-2">
           <label for="business_name">Business Name</label>
           <input type="text" class="form-control" id="business_name" required [(ngModel)]="business.business_name"
             name="business_name" />
         </div>
-        <div class="form-group">
+        <div class="form-group mb-2">
           <label for="business_email">Business Email</label>
           <input class="form-control" id="business_email" required [(ngModel)]="business.business_email"
             name="business_email" />
         </div>
-        <div class="form-group">
+        <div class="form-group mb-2">
           <label for="neighbourhood">Neighbourhood</label>
           <input class="form-control" id="neighbourhood" required [(ngModel)]="business.neighbourhood"
             name="neighbourhood" type="number"/>
         </div>
-        <button (click)="saveBusiness()" class="btn btn-success">Submit</button>
+        <button (click)="saveBusiness()" class="btn btn-success mt-3">Submit</button>
       </div>
       <div *ngIf="submitted">
         <h4>Tutorial was submitted successfully!</h4>
-        <button class="btn btn-success" (click)="newBusiness()">Add</button>
+        <button class="btn btn-success mt-3" (click)="newBusiness()">Add</button>
       </div>
     </div>
   </div>
