fix bug with router links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
    <div class="container d-flex flex-wrap">
      <ul class="nav me-auto ">
        <li class="nav-item"><a href="" class="nav-link link-white px-2 active" aria-current="page">Home</a></li>
-       <li class="nav-item"><a routerlink="" href="/post" class="nav-link link-white px-2">Posts</a></li>
-       <li class="nav-item"><a href="/business" class="nav-link link-white px-2">Business</a></li>
+       <li class="nav-item"><a [routerLink]="['/post']" href="" class="nav-link link-white px-2">Posts</a></li>
+       <li class="nav-item"><a [routerLink]="['/business']" class="nav-link link-white px-2">Business</a></li>
      </ul>
      <ul class="nav">
        <li class="nav-item"><a href="#" class="nav-link link-white px-2">Login</a></li>
