--- a/src/app/components/business-details/business-details.component.html
+++ b/src/app/components/business-details/business-details.component.html
@@ -34,7 +34,7 @@
     </div>
     <div *ngIf="!currentBusiness.id">
     <br />
-    <p>Cannot access this Tutorial...</p>
+    <p>Cannot access this Business</p>
     </div>
   </div>
 </div>
