--- a/src/app/components/business-list/business-list.component.html
+++ b/src/app/components/business-list/business-list.component.html
@@ -25,7 +25,7 @@
       </div>
       <div *ngIf="!currentBusiness">
         <br />
-        <p>Please click on a Business...</p>
+        <p class="text-center">Please click on a Business</p>
       </div>
     </div>
   </div>
