--- a/src/app/components/post-list/post-list.component.html
+++ b/src/app/components/post-list/post-list.component.html
@@ -27,7 +27,7 @@
       </div>
       <div *ngIf="!currentPost">
         <br />
-        <p>Please click on a Tutorial...</p>
+        <p class="text-center">Please click on a Post</p>
       </div>
     </div>
   </div>
